--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,6 @@ h2{
 
 .test{
     background-color: rgba(255, 255, 255, 0.25);
-    height: 40px;
+    line-height: 2em;
     border: 1px solid black;
 }
